general all-out update